# uni

./: Cargo.toml  Dockerfile  README.md  a.py  b.py  c.py  d.py
.github/workflows/: docker-publish.yml
crates/unicorn-core/: Cargo.toml
crates/unicorn-core/src/: config.rs  lib.rs  logging.rs  models.rs
crates/unicorn-db/migrations/: 0001_initial.sql
crates/unicorn-db/src/: lib.rs  ssh_keys.rs
crates/unicorn-git/: Cargo.toml
crates/unicorn-git/src/: discovery.rs  error.rs  lib.rs
crates/unicorn-metrics/: Cargo.toml
crates/unicorn-ssh/: Cargo.toml
crates/unicorn-ssh/src/: auth.rs  lib.rs
crates/unicorn-tui/: Cargo.toml
crates/unicorn-tui/src/: lib.rs
crates/unicorn-tui/src/widgets/: dashboard.rs  primitives.rs
docs/: ARCHITECTURE.md
unicorn/: .gitignore  Cargo.toml  README.md
unicorn/config/: unicorn.toml
unicorn/crates/unicorn-cli/: Cargo.toml
unicorn/crates/unicorn-cli/src/: main.rs
unicorn/crates/unicorn-core/: Cargo.toml
unicorn/crates/unicorn-core/src/: config.rs  error.rs
unicorn/crates/unicorn-db/: Cargo.toml
unicorn/crates/unicorn-db/src/: error.rs
unicorn/crates/unicorn-git/src/: repository.rs
unicorn/crates/unicorn-metrics/src/: lib.rs
unicorn/crates/unicorn-ssh/: Cargo.toml
unicorn/crates/unicorn-ssh/src/: lib.rs
unicorn/crates/unicorn-tui/src/: app.rs  theme.rs
unicorn/crates/unicorn-tui/src/widgets/: chrome.rs  mod.rs
