[workspace]
resolver = "2"
members = [
    "crates/unicorn-core",
    "crates/unicorn-git",
    "crates/unicorn-metrics",
    "crates/unicorn-ssh",
    "crates/unicorn-db",
    "crates/unicorn-tui",
    "crates/unicorn-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Unicorn Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/unicorn"
rust-version = "1.85"

# Versions below were checked against docs.rs / crates.io at generation
# time rather than pulled from memory - see generate_unicorn.py's module
# docstring for the full list and what was verified.
[workspace.dependencies]
tokio = { version = "1.53", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
thiserror = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
gix = "0.84"
ratatui = "0.29"
crossterm = "0.28"
sysinfo = "0.39"
russh = { version = "0.54", features = ["ring"] }
sqlx = { version = "0.9", default-features = false }
uuid = { version = "1", features = ["v4", "serde"] }
async-trait = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
