[package]
name = "unicorn-ssh"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Rust-native SSH server for Unicorn, built on russh, with real public-key authentication against a pluggable KeyStore."

[dependencies]
russh.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
rand = "0.8"
# async-trait is required because `KeyStore` is used as `Arc<dyn KeyStore>`
# (dynamic dispatch across every SSH connection handler), and native
# async-fn-in-traits is not yet dyn-compatible in stable Rust.
async-trait.workspace = true
