[package]
name = "unicorn-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Shared configuration, domain models, and error types for Unicorn."

[dependencies]
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
