[package]
name = "unicorn-ssh"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
description = "Rust-native SSH server scaffold for Unicorn, built on russh."

[dependencies]
russh.workspace = true
russh-keys.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
rand = "0.8"
